Cambios nueva entrega

--- a/index.html
+++ b/index.html
@@ -3,31 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>LUNE PASTELERIA - Inicio</title>
   </head>
   <body>
-    <div class="container">
-      <h1>LUNE</h1>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Inicio</a></li>
+          <li><a href="./pages/productos.html">Productos</a></li>
+          <li><a href="./pages/productos.html">Contacto</a></li>
+          <li><a href="./pages/eventos.html">Eventos</a></li>
+          <li><a href="./pages/nosotros.html">Nosotros</a></li>
+        </ul>
+      </nav>
+    </header>
 
-      <ul>
-        <li><a href="index.html">Inicio</a></li>
-        <li><a href="productos.html">Productos</a></li>
-        <li><a href="eventos.html">Eventos</a></li>
-        <li><a href="nosotros.html">Nosotros</a></li>
-        <li><a href="contacto.html">Contacto</a></li>
-      </ul>
+    <main>
+      <div class="container">
+        <h1>LUNE</h1>
+        <img src="./imagenes/img 1.JPG" alt="galletas" />
+      </div>
+    </main>
 
-      <img
-        src="https://images.unsplash.com/photo-1595144780677-6d0b5abbd089?q=80&w=2043&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-        alt="pasteles en una vidriera"
-      />
-
-      <footer>
-        <p>&copy; Copyright, LUNE, 2025</p>
-      </footer>
-    </div>
+    <footer>
+      <p>&copy; Copyright, LUNE, 2025</p>
+    </footer>
   </body>
 </html>
-
-
